executable('stlinkv3-lib-example-app',
    'main.cpp',
    dependencies: libstlinkv3_bridge_libusb_dep
    )

executable('stpoweron',
    'stpoweron.cpp',
    dependencies: libstlinkv3_bridge_libusb_dep
    )

executable('stpoweroff',
    'stpoweroff.cpp',
    dependencies: libstlinkv3_bridge_libusb_dep
    )

executable('stdedics',
    'stdedics.cpp',
    dependencies: libstlinkv3_bridge_libusb_dep
    )

executable('stflashcs',
    'stflashcs.cpp',
    dependencies: libstlinkv3_bridge_libusb_dep
    )


executable('stpowerloop',
    'stpowerloop.cpp',
    dependencies: libstlinkv3_bridge_libusb_dep
    )
